# DarkPlate

./: .gitignore  CMakeLists.txt  app.py  license.txt  readme.md
nn/: DarkPlate.cfg  DarkPlate.names  cp_annotated_images.sh
nn/set_01/: DSCN3781_frame_000014.txt  DSCN3781_frame_000039.txt  DSCN3781_frame_000044.txt  DSCN3781_frame_000207.txt  DSCN3781_frame_000718.txt  DSCN3781_frame_000729.txt  DSCN3781_frame_000807.txt  DSCN3781_frame_000958.txt  DSCN3781_frame_001136.txt  DSCN3781_frame_001208.txt  DSCN3781_frame_001211.txt  DSCN3782_frame_000102.txt  DSCN3782_frame_000170.txt  DSCN3782_frame_000449.txt  DSCN3782_frame_000590.txt  DSCN3782_frame_000641.txt  DSCN3782_frame_000753.txt  DSCN3782_frame_000820.txt  DSCN3782_frame_000866.txt  DSCN3782_frame_000885.txt  DSCN3782_frame_001075.txt  DSCN3782_frame_001389.txt  DSCN3782_frame_001391.txt  DSCN3782_frame_001398.txt  DSCN3782_frame_001425.txt  DSCN3782_frame_001433.txt  DSCN3782_frame_001470.txt  DSCN3783_frame_000191.txt  DSCN3783_frame_000419.txt  DSCN3783_frame_000670.txt  DSCN3783_frame_000735.txt  DSCN3783_frame_001235.txt  DSCN3783_frame_001597.txt  DSCN3783_frame_001952.txt  DSCN3783_frame_002320.txt  DSCN3783_frame_002937.txt  DSCN3783_frame_003249.txt  DSCN3783_frame_003350.txt  DSCN3784_frame_000010.txt  DSCN3784_frame_000156.txt  (+406 more)
src/: CMakeLists.txt  main.cpp
templates/: index.html  output.html
